# zotero-auto-grouper

./: .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  codecov.yml  pyproject.toml
.github/workflows/: tests.yml
src/: __main__.py
